--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
     <main>
         <!-- First section  -->
         <section class="section_one">
-            <img src="N/cloud.png" alt="cloud-one" class="cloud_one">
+            <img src="cloud.png" alt="cloud-one" class="cloud_one">
             <div class="section_one">
                 <h1>I'm Hassan Musa</h1>
             <p>A <span>Web Developer.</span></p>
             </div>
             <div class="cloud-img">
-                <img src="N/cloud.png" alt="cloud-two" class="cloud-img">
+                <img src="cloud.png" alt="cloud-two" class="cloud-img">
             </div>
                 <div class="rock-img">
-                    <img src="N/mountain.png" alt="rock-image" class="rock-img">
+                    <img src="mountain.png" alt="rock-image" class="rock-img">
                 </div>
              </section>
 
         <!-- Second Section  -->
         <section class="section_two">
             <div class="profile_container">
-                <img src="N/santy.jpg" alt="Hassan's-profile-image" class="profile_img">
+                <img src="santy.jpg" alt="Hassan's-profile-image" class="profile_img">
                 <h3>Hello</h3>
                 <p>I am a certified Buildng Technologist and  into Web Development.</p>
             </div>
@@ -52,17 +52,17 @@
             <div id="skills" class="skills_container">
                 <h3>My Skills.</h3>
                 <div class="skill skill_one">
-                    <img src="N/dwg.png" alt="Autocad-image">
+                    <img src="dwg.png" alt="Autocad-image">
                     <h5>AutoCAD 2D MEP Designs</h5>
                     <p>I create both electrical and mechanical drawings for already drawn architectural building drawings.This is what gives the electricians guide for carrying out their work on the building's sit</p>
                 </div>
                 <div class="skill skill_two">
-                    <img src="N/coding.png" alt="picture-of-an-animated-desktop">
+                    <img src="coding.png" alt="picture-of-an-animated-desktop">
                     <h5>Web Development</h5>
                     <p>I recently just started my journey into web development. With the motivation i have, I aspire greatly to have a successful career in web development.</p>
                 </div>
                 <div class="skill_three">
-                    <img src="N/hamburger.png" alt="Hamburger-image">
+                    <img src="hamburger.png" alt="Hamburger-image">
                     <h5>Eating</h5>
                     <p>I just love eating food because it makes me happy. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, neque officia incidunt expedita laborum hic cumque commodi perspiciatis aspernatur repudiandae nulla sint animi corporis illum facere.</p>
                 </div>
